# cartdesk-os

./: .gitattributes  .gitignore  .mxproject  AGENTS.md  CMakeLists.txt  CMakePresets.json  CartDeck.cfg  README.SDMCC.md  README.md  STM32H743XX_FLASH.bak.ld  STM32H743XX_FLASH.ld  carddesk-os.ioc  cartdesk-os.ioc  cartdesk_io_pinout.csv  xih6-display.ioc
Core/APPS/LVGL/: lv_conf.h  lvgl.h
Core/APPS/LVGL/font/: lv_menu_font.c
Core/APPS/LVGL/port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_port_tick.c  lv_port_tick.h  lvgl_init.c  lvgl_init.h
Core/APPS/LVGL/src/: lv_conf_internal.h
Core/APPS/LVGL/src/draw/dma2d/: lv_draw_dma2d.c
Core/APPS/LVGL/src/drivers/display/st_ltdc/: lv_st_ltdc.c
Core/APPS/LVGL/src/osal/: lv_cmsis_rtos2.c
Core/APPS/LVGL/src/themes/default/: lv_theme_default.c
Core/APPS/TASK/: LED.c  LUA.c  LVGL.c  Task.h  cartdesk_task.h
Core/Cart/: cart_bin.c  cart_bin.h  cart_index.c  cart_index.h  xhgc_cart.c  xhgc_cart.h
Core/Debug/: board_test.c  board_test.h  runtime_stats.c  runtime_stats.h  xhgc_mem_overlay.c  xhgc_mem_overlay.h
Core/Driver/CRC/: crc.h
Core/Driver/EEPROM/: eeprom.c  eeprom.h
Core/Driver/FLASH/: flash.c  flash.h  lfs_port.c  lfs_port.h  lfs_util.c  lfs_util.h
Core/Driver/GPIO/: board_gpio.c  board_gpio.h  board_pwm.c  board_pwm.h
Core/Driver/LCD/: jbmono_thin_a8_20px.h  lcd.c  lcd.h
Core/Driver/RNG/: rng_port.c  rng_port.h
Core/Driver/SDRAM/: sdram.c  sdram.h  sdram_cold_pool.c
Core/Driver/TOUCH/: INTEGRATION_GUIDE.md  touch.c  touch.h  touch_advanced.c
Core/Driver/UID/: uid.c  uid.h
Core/Inc/: FreeRTOSConfig.h  RTE_Components.h  crc.h  lcd.h  lua_vm.h  lua_vm_memory.h  main.h  mdma.h  sdram.h  sdram_cold_pool.h  sdram_layout.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/LuaPort/: LuaPort_API.md  Lua_xxx.c.template  app_arena.c  app_arena.h  lua_cart_resource_cache.c  lua_cart_resource_cache.h  lua_port.c  lua_port.h  lua_ui.h  resource_arena_owner.c  resource_arena_owner.h  resource_manager.c  resource_manager.h
Core/LuaPort/modules/: lua_crc.c  lua_delay.c  lua_gpio.c  lua_pwm.c  lua_rng.c  lua_sd.c  lua_tim.c  lua_ui_button.c  lua_ui_image.c  lua_ui_slider.c
Core/LuaPort/src/: luac.c  luaconf.h
Core/Memory/: xhgc_dcache.c  xhgc_dcache.h  xhgc_meminfo.c  xhgc_meminfo.h  xhgc_memory_layout.c  xhgc_memory_layout.h
Core/Screen/Page/: jbm_el_20px.h  launcher_action_hints.c  launcher_action_hints.h  ui_launcher_cache.c  ui_launcher_cache.h  ui_screen_launcher.c  ui_screen_launcher.h
Core/Screen/utils/: cart_reader.c  cart_reader.h  preview_argb_current.c  preview_argb_current.h
Core/Src/: crc.c  dma2d.c  fmc.c  freertos_heap.c  freertos_hooks.c  gpio.c  i2c.c  lcd.c  ltdc.c  lua_vm.c  lua_vm_memory.c  main.c  mdma.c  quadspi.c  sdmmc.c  stm32h7xx_it.c  syscalls.c  tim.c  usart.c
Docs/: CLion_Build_Presets.md  SDRAM_Layout_Spec_v1.0.md  architecture.md  lua_gpio.md  lua_pwm.md
Docs/cart/: XHGC_cart_bin_v2_格式规范.md
Docs/debug/: Memory_Overlay.md
Docs/display/: DMA2D_适配逻辑.md  launcher_action_hints.md
Docs/lua/: lua_api.md  lua_gpio.md  lua_lifecycle.md  lua_pwm.md  lua_runtime_contract.md
Docs/memory/: Allocator_Policy.md  Memory_Regression_Checklist.md  SDRAM_Layout_Spec_v1.0.md
Docs/superpowers/plans/: 2026-06-19-lua-runtime-lifecycle-state-machine.md
Docs/superpowers/specs/: 2026-06-19-lua-runtime-lifecycle-state-machine-design.md
Drivers/CMSIS/RTOS2/Include/: cmsis_os2.h
FATFS/App/: fatfs.c  fatfs.h
cmake/: check_lua_allocator_usage.cmake  gcc-arm-none-eabi.cmake  print_sdram_usage.py
cmake/stm32cubemx/: CMakeLists.txt
examples/: gpio_input.lua  gpio_pa0_led.lua  pwm_buzzer.lua  pwm_fade.lua  pwm_freq.lua  pwm_simple.lua
examples/lua/: 99_comprehensive_test.lua  README.md
examples/lua/basic/: 01_lifecycle.lua  lifecycle.lua
examples/lua/gpio/: 02_gpio_blink.lua  gpio_input.lua  gpio_pa0_led.lua
examples/lua/pwm/: 03_pwm_fade.lua  pwm_buzzer.lua  pwm_fade.lua  pwm_freq.lua  pwm_simple.lua
examples/lua/storage/: 04_sd_file.lua
examples/lua/ui/: 05_ui_button.lua  06_ui_slider_pwm.lua  07_ui_button_print_uart.lua  08_ui_image.lua
tests/: task_lua_state_test.c  xhgc_cart_host_test.c
tests/lua/: api_smoke_test.lua  rng_crc_pwm_api_test.lua  style_contract_lint.sh  ui_children_test.lua
tests/stubs/: main.h
tools/luavm/: CMakeLists.txt  host_platform.c  luavm_platform.h  main.c
